@@ -1,3 +1,6 @@
+Mar 15, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- added Serious Sam: The Second Encounter
+
 Mar 10, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
 - store all map names lowercase, otherwise many maps are reported as
   not installed
